syntax = "proto3";

package notification;

option go_package = "github.com/ZekebayevYe/notification-service/internal/grpc;grpc";

message EmailRequest {
  string email = 1;
}

message Notification {
  string id = 1;
  string title = 2;
  string message = 3;
  int64 send_at = 4;
}

message Empty {}

service NotificationService {
  rpc Subscribe(EmailRequest) returns (Empty);
  rpc Unsubscribe(EmailRequest) returns (Empty);
  rpc CreateNotification(Notification) returns (Empty);
}
